syntax = "proto3";
 
import public "google/protobuf/empty.proto";

package policy;

option go_package="github.com/kubearmor/KubeArmor/protobuf";

// Health check
message HealthCheckReq {
  int32 nonce = 1;
}

// healthcheck reply message
message HealthCheckReply {
  int32 Retval = 1;
}

enum PolicyStatus {
  Failure = 0 ;
  Applied = 1 ;
  Deleted = 2 ;
  Modified = 3 ;
  NotExist = 4;
  Invalid = 5;  

}
message response {
    PolicyStatus status = 1;
}

message policy {
    bytes policy = 1;
}

message ContainerData {
  repeated string policyList = 1;
  int32 policyEnabled = 2;
}
message HostSecurityPolicies {
  repeated string policyList = 1; 
}
message ProbeResponse {
   repeated string containerList = 1;
   map<string, ContainerData> containerMap = 2;
   map<string , HostSecurityPolicies> hostMap = 3;
}
service ProbeService {
    rpc getProbeData(google.protobuf.Empty) returns (ProbeResponse);
}

service PolicyService {
    rpc containerPolicy (policy) returns (response);
    rpc hostPolicy (policy) returns (response);
}

service PolicyStreamService {
    rpc HealthCheck(HealthCheckReq) returns (HealthCheckReply);
    rpc containerPolicy (stream response) returns (stream policy);
    rpc hostPolicy (stream response) returns (stream policy);
}
